--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -79,7 +79,7 @@
                 "avoidEscape": true
             }
         ],
-        "semi": "off",
+        "semi": 1,
         "react/react-in-jsx-scope": "off",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
