--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
             "babelrc": true,
             "configFile": false,
             "presets": [
-                "@babel/preset-env"
+                "@babel/preset-react"
             ]
         }
     },
