--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
-    "lint:fix": "eslint ./src --fix --color"
+    "lint:fix": "eslint ./src --fix --color",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -60,7 +61,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "2.8.8"
+    "lint-staged": "^13.2.2",
+    "prettier": "2.8.8",
+    "husky": "^8.0.0"
   },
   "keywords": [],
   "author": "",
