--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,10 +34,11 @@
         "babelOptions": {
             "babelrc": true,
             "configFile": false,
-            "presets": [
-                // "@babel/preset-env"
-                "@babel/eslint-parser"
-            ]
+            // "presets": [
+            //      "@babel/preset-env"
+            //    "module": "@babel/eslint-parser"
+            // ],
+            "module": "@babel/eslint-parser"
         }
     },
     "parser": "@babel/eslint-parser",
