--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
     "trailingComma": "es5",
     "endOfLine": "lf",
     "printWidth": 120,
-    "semi": true,
+    "semi": false,
     "bracketSpacing": true
 }
