--- a/package.json
+++ b/package.json
@@ -41,13 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "lint-staged": {
-    "*.js": [
-      "npm run lint:fix",
-      "git add"
-    ],
-    "*.{js, css, md}": "prettier --write"
-  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
@@ -61,11 +54,18 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
-    "prettier": "2.8.8",
-    "husky": "^8.0.0"
+    "prettier": "2.8.8"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "lint-staged": {
+    "*.js": [
+      "npm run lint:fix",
+      "git add"
+    ],
+    "*.{js, css, md}": "prettier --write"
+  }
 }
