--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix --color",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
     "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
@@ -57,6 +59,11 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "prettier": "2.8.8"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
   },
   "keywords": [],
   "author": "",
