--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,8 +49,14 @@
     ],
     "rules": {
         "react/destructuring-assignment": 0,
-        "react/prefer-stateless-function": 0,
+        // "react/prefer-stateless-function": 0,
         "jsx-a11y/label-has-associated-control": 0,
+        "react/function-component-definition": [
+            2,
+            {
+                "namedComponents": "function-declaration"
+            }
+        ],
         "react-hooks/exhaustive-deps": [
             "warn",
             {
