--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mariakham.github.io/TodoApp.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.30.0",
     "gh-pages": "^5.0.0",
+    "nanoid": "^4.0.2",
+    "nanoid-dictionary": "^4.3.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix --color",
