--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,6 +51,7 @@
         "react/destructuring-assignment": 0,
         // "react/prefer-stateless-function": 0,
         "jsx-a11y/label-has-associated-control": 0,
+        "consistent-return": 0,
         "react/function-component-definition": [
             2,
             {
