--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,9 +68,11 @@
         "no-plusplus": "off",
         "no-nested-ternary": "off",
         "indent": [
-            "error",
-            "SwitchCase",
-            2
+            [
+                "error",
+                2
+            ],
+            "SwitchCase"
         ],
         "prettier/prettier": [
             "error",
